# agentic_ai

./: .gitignore  Agentic_Global_Trend_Explorer_2025.ipynb  README.md  global_ai_investment_analysis_agentic_model.ipynb  multi_skill_intelligent_research_agent_with_memory.ipynb  pyproject.toml  research_assistant_agent.ipynb
code/: Agentic_Global_Trend_Explorer_2025.ipynb
code/adk/: agent.py
code/langchain/: multi_skill_intelligent_research_agent.ipynb  simple_agentic_ai.ipynb
code/mcp/: client.ipynb  langchain_client.py  mcp_server.py  simple_client.py
