[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.6.1",
    "duckduckgo-search>=8.1.1",
    "fastmcp>=2.13.1",
    "google-adk>=1.20.0",
    "httpx>=0.28.1",
    "ipykernel>=7.0.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-mcp>=0.2.1",
    "langchain-ollama>=0.3.10",
    "mcp>=1.22.0",
    "numexpr>=2.14.1",
    "openai>=2.4.0",
    "python-dotenv>=1.1.1",
]
